kubernetes/apps/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  labels:
    app: speedtest-tracker
spec:
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:1.14.7 # {"$imagepolicy": "apps:speedtest-tracker"}
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: speedtest-tracker-pvc
